<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Crypto</string>
    <string name="action_portfolio">Portfolio</string>
    <string name="action_ok">OK</string>
    <string name="no_items_found">No items found</string>
    <string name="name_value">%s (%s)</string>
    <string name="price_usd">Price (USD)</string>
    <string name="price_usd_value">$%s</string>
    <string name="change_24h">Change (24h)</string>
    <string name="change_24h_value">%s%%</string>
    <string name="rank">Rank</string>
    <string name="price_btc">Price (BTC)</string>
    <string name="volume_usd_24h">Volume (24h)</string>
    <string name="market_cap">Market Cap</string>
    <string name="historical_data_of_the_price">Historical data of the price (USD)</string>
    <string name="amount">Amount</string>
    <string name="total_price_usd">Total price (USD)</string>
    <string name="not_available">Not available</string>
    <string name="amount_to_trade_question">Amount to trade?</string>
    <string name="zero">0</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_trade">Trade</string>
    <string name="trade_completed">Trade completed</string>
    <string name="trade_amount_can_not_be_zero">Trade amount can not be 0</string>
    <string name="portfolio">Portfolio</string>
</resources>
