<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coinDetailCardView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/cardBackground"
    card_view:cardPreventCornerOverlap="false"
    card_view:cardUseCompatPadding="true"
    tools:ignore="ContentDescription,MissingPrefix">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:background="@color/cardBackground">

            <ImageButton
                android:id="@+id/coinDetailTrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@color/transparent"
                android:src="@drawable/ic_trade"
                android:contentDescription="@string/app_name" />

            <TextView
                fontPath="fonts/Montserrat-Light.ttf"
                android:id="@+id/coinDetailName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/app_name"
                android:maxLines="2"
                android:ellipsize="end"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/textColorPrimary" />

            <TextView
                fontPath="fonts/Montserrat-Light.ttf"
                android:id="@+id/coinDetailPriceUsdLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/coinDetailName"
                android:text="@string/price_usd"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="13sp"
                android:textStyle="normal"
                android:textColor="@color/textColorSecondary" />

            <TextView
                fontPath="fonts/Montserrat-Light.ttf"
                android:id="@+id/coinDetailPriceUsd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/coinDetailName"
                android:layout_toEndOf="@+id/coinDetailPriceUsdLabel"
                android:text="@string/app_name"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="13sp"
                android:textStyle="normal"
                android:textColor="@color/value" />

            <TextView
                fontPath="fonts/Montserrat-Light.ttf"
                android:id="@+id/coinDetailPercentChange24hLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/coinDetailPriceUsdLabel"
                android:text="@string/change_24h"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="13sp"
                android:textStyle="normal"
                android:textColor="@color/textColorSecondary" />

            <TextView
                fontPath="fonts/Montserrat-Light.ttf"
                android:id="@+id/coinDetailPercentChange24h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/coinDetailPriceUsdLabel"
                android:layout_toEndOf="@+id/coinDetailPercentChange24hLabel"
                android:text="@string/app_name"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="13sp"
                android:textStyle="normal"
                android:textColor="@color/positiveChange" />

            <TextView
                fontPath="fonts/Montserrat-Light.ttf"
                android:id="@+id/coinDetailPriceBtcLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/coinDetailPriceUsdLabel"
                android:layout_toStartOf="@+id/coinDetailPriceBtc"
                android:text="@string/price_btc"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="13sp"
                android:textStyle="normal"
                android:textColor="@color/textColorSecondary" />

            <TextView
                fontPath="fonts/Montserrat-Light.ttf"
                android:id="@+id/coinDetailPriceBtc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/coinDetailPriceUsdLabel"
                android:text="@string/app_name"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="13sp"
                android:textStyle="normal"
                android:textColor="@color/positiveChange" />

            <TextView
                fontPath="fonts/Montserrat-Light.ttf"
                android:id="@+id/coinDetailRankLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/coinDetailPriceBtcLabel"
                android:layout_toStartOf="@+id/coinDetailRank"
                android:text="@string/rank"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="13sp"
                android:textStyle="normal"
                android:textColor="@color/textColorSecondary" />

            <TextView
                fontPath="fonts/Montserrat-Light.ttf"
                android:id="@+id/coinDetailRank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/coinDetailPriceBtcLabel"
                android:text="@string/app_name"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="13sp"
                android:textStyle="normal"
                android:textColor="@color/black" />

            <TextView
                fontPath="fonts/Montserrat-Light.ttf"
                android:id="@+id/coinDetailVolumeUsd24hLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/coinDetailPercentChange24hLabel"
                android:text="@string/volume_usd_24h"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="13sp"
                android:textStyle="normal"
                android:textColor="@color/textColorSecondary" />

            <TextView
                fontPath="fonts/Montserrat-Light.ttf"
                android:id="@+id/coinDetailVolumeUsd24h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/coinDetailPercentChange24hLabel"
                android:layout_toEndOf="@+id/coinDetailVolumeUsd24hLabel"
                android:text="@string/app_name"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="13sp"
                android:textStyle="normal"
                android:textColor="@color/value" />

            <TextView
                fontPath="fonts/Montserrat-Light.ttf"
                android:id="@+id/coinDetailMarketCapLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/coinDetailVolumeUsd24hLabel"
                android:text="@string/market_cap"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="13sp"
                android:textStyle="normal"
                android:textColor="@color/textColorSecondary" />

            <TextView
                fontPath="fonts/Montserrat-Light.ttf"
                android:id="@+id/coinDetailMarketCap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/coinDetailVolumeUsd24hLabel"
                android:layout_toEndOf="@+id/coinDetailVolumeUsd24hLabel"
                android:text="@string/app_name"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="13sp"
                android:textStyle="normal"
                android:textColor="@color/black" />
        </RelativeLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>
