<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coinCardView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/cardBackground"
    card_view:cardPreventCornerOverlap="false"
    card_view:cardUseCompatPadding="true"
    tools:ignore="ContentDescription,MissingPrefix">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:background="@color/cardBackground">

            <TextView
                fontPath="fonts/Montserrat-Light.ttf"
                android:id="@+id/coinName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/app_name"
                android:maxLines="2"
                android:ellipsize="end"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/textColorPrimary" />

            <TextView
                fontPath="fonts/Montserrat-Light.ttf"
                android:id="@+id/coinPriceUsdLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/coinName"
                android:text="@string/price_usd"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="13sp"
                android:textStyle="normal"
                android:textColor="@color/textColorSecondary" />

            <TextView
                fontPath="fonts/Montserrat-Light.ttf"
                android:id="@+id/coinPriceUsd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/coinName"
                android:layout_toEndOf="@+id/coinPriceUsdLabel"
                android:text="@string/app_name"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="13sp"
                android:textStyle="normal"
                android:textColor="@color/value" />

            <TextView
                fontPath="fonts/Montserrat-Light.ttf"
                android:id="@+id/coinPercentChange24hLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/coinPriceUsd"
                android:text="@string/change_24h"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="13sp"
                android:textStyle="normal"
                android:textColor="@color/textColorSecondary" />

            <TextView
                fontPath="fonts/Montserrat-Light.ttf"
                android:id="@+id/coinPercentChange24h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/coinPriceUsd"
                android:layout_toEndOf="@+id/coinPercentChange24hLabel"
                android:text="@string/app_name"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="13sp"
                android:textStyle="normal"
                android:textColor="@color/positiveChange" />

            <TextView
                fontPath="fonts/Montserrat-Light.ttf"
                android:id="@+id/coinRankLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/coinPriceUsd"
                android:layout_toStartOf="@+id/coinRank"
                android:text="@string/rank"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="13sp"
                android:textStyle="normal"
                android:textColor="@color/textColorSecondary" />

            <TextView
                fontPath="fonts/Montserrat-Light.ttf"
                android:id="@+id/coinRank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/coinPriceUsd"
                android:text="@string/app_name"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="13sp"
                android:textStyle="normal"
                android:textColor="@color/black" />
        </RelativeLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>
